fixing central alignment for the whole page on large screens, hero image max width

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     font-family: "Montserrat", sans-serif;
-    margin: 0;
+    margin: auto;
     background-color: rgb(234, 234, 250);
     color: navy;
-    max-width: 1400px;
+    max-width: 1300px;
 }
 
 /********** HERO-IMAGE  ************/
@@ -12,16 +12,16 @@ body {
 }
   
 .hero-image {
-    width: 100vw;
-    height: 100vh;
+    width:100%;
+    height: 100%;
     object-fit: cover;
 }
   
 .hero-title {
     position: absolute;
-    top: 70px;
+    top: 40px;
     left: 20px;
-    font-size: 20px;
+    font-size: 12px;
     color: rgb(78, 4, 195);
 }
   
@@ -31,26 +31,26 @@ body {
 
 .hero-subtitle1 {
     position: absolute;
-    top: 120px;
+    top: 50px;
     left: 20px;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 900;
     color: rgb(78, 9, 206);
 }
 
 .hero-subtitle2 {
     position: absolute;
-    top: 160px;
+    top: 90px;
     left: 20px;
     font-weight: 900;
-    font-size: 35px;
-    color: rgb(152, 9, 248);
+    font-size: 30px;
+    color: rgb(128, 5, 211);
 }
 
 .logos {
     position: absolute;
     top: 3%;
-    left: 60%;
+    left: 65%;
     display: grid;
     grid-gap: 10px;
     grid-template-columns: auto auto auto;
@@ -69,10 +69,10 @@ a:link {
 
 .my-photo {
     position: absolute;
-    top: 85%;
-    left: 60%;
-    width: 120px;
-    height: 120px;
+    top: 70%;
+    left: 65%;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     box-shadow: 1px 2px 1px 1px rgba(17, 75, 98, 0.4);
 }
@@ -320,23 +320,28 @@ p.description-skills {
     .hero-image {
         height: 40%;
     }
+
+    .logos {
+        top: 3%;
+        left: 75%;
+    }
     .hero-title {
         position: absolute;
         top: 50px;
         left: 50px;
-        font-size: 40px;
+        font-size: 30px;
     }
       
     .hero-subtitle1 {
         position: absolute;
-        top: 130px;
+        top: 100px;
         left: 50px;
         font-size: 60px;
     }
     
     .hero-subtitle2 {
         position: absolute;
-        top: 200px;
+        top: 170px;
         left: 50px;
         font-size: 60px;
     }
@@ -344,7 +349,7 @@ p.description-skills {
     .my-photo {
         position: absolute;
         top: 78%;
-        left: 60%;
+        left: 65%;
         width: 170px;
         height: 170px;
         border-radius: 50%;
@@ -380,6 +385,7 @@ p.description-skills {
 @media(min-width: 1200px) {
     .hero-image {
         height: 40%;
+        
     }
 
     .hero-title {
@@ -430,7 +436,7 @@ p.description-skills {
     
     .my-photo {
         position: absolute;
-        top: 87%;
+        top: 85%;
         left: 70%;
         width: 200px;
         height: 200px;
